--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-  background-color: #282c34;
+  background-color: #010000;
   min-height: 20vh;
   display: flex;
   flex-direction: column;
@@ -25,7 +25,47 @@ header {
   padding: 10px 20px;
 }
 
-ul {
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: #da2020;
+}
+
+/* Header */
+header {
+  background-color: #282c34;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #ffffff;
+}
+
+.main-nav {
+  background: #f3c623;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 30px;
+  flex-wrap: wrap;
+}
+.main-nav ul {
   list-style-type: none;
   padding-left: 0;
+  display: flex;
+  gap: 15px;
+}
+
+.main-nav a {
+  color: #06662b;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.main-nav a:hover {
+  color: #da2020;
 }
