--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Verdana, sans-serif;
   margin: 0;
   box-sizing: border-box;
   background-color: #da2020;
 }
 
 header {
-  background-color: #010000;
+  background-color: #0a0909;
   min-height: 20vh;
   display: flex;
   flex-direction: column;
@@ -25,34 +25,6 @@ header {
   padding: 10px 20px;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  box-sizing: border-box;
-  background-color: #da2020;
-}
-
-/* Header */
-header {
-  background-color: #282c34;
-  min-height: 20vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #ffffff;
-}
-
-.main-nav {
-  background: #f3c623;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px 30px;
-  flex-wrap: wrap;
-}
 .main-nav ul {
   list-style-type: none;
   padding-left: 0;
