--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,16 @@ header {
 .main-nav a:hover {
   color: #da2020;
 }
+
+.figure-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  padding: 20px;
+  width: 250px;
+  background-color: white;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  text-align: center;
+}
