--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ header {
   background: #f3c623;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   padding: 10px 20px;
 }
@@ -44,7 +44,7 @@ header {
 
 .figures-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   gap: 20px;
   overflow-x: auto;
