Updated body background with an image

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   font-family: Verdana, sans-serif;
   margin: 0;
   box-sizing: border-box;
-  background-color: #da2020;
+  background-image: url('https://s36500.pcdn.co/wp-content/uploads/2020/12/Vertical_pan_african_flag.png');
 }
 
 header {
