Added one more dataset for Barack Obama

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ header {
 }
 
 .main-nav {
-  background: #f4f3f3;
+  background: #fffdf0;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
